samples/_failures_safe/1761298584_3438cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f41e287f.c: In function ‘main’:
./samples/SAFE/__tmp_f41e287f.c:158:5: error: expected expression at end of input
  158 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_f41e287f.c:158:5: error: expected declaration or statement at end of input
